--- a/backend/test_utils/Cargo.toml
+++ b/backend/test_utils/Cargo.toml
@@ -19,3 +19,6 @@ tokio-util = { version = "0.6.7", features = ["full"] }
 common = { path = "../common" }
 time = { version = "0.3.0", features = ["formatting"] }
 flume = "0.10.8"
+
+[dev-dependencies]
+fdlimit = "0.2"
