--- a/backend/test_utils/Cargo.toml
+++ b/backend/test_utils/Cargo.toml
@@ -21,5 +21,7 @@ time = { version = "0.3.0", features = ["formatting"] }
 flume = "0.10.8"
 
 [dev-dependencies]
-fdlimit = "0.2"
+chrono = "0.4"
 clap = { version = "3.2", features = ["derive"] }
+fdlimit = "0.2"
+zzz = { version = "0.1", features = ["streams"] }
